Fixed scrollbar on main toolbar

--- a/projects/motif-web-admin-core/src/assets/web-admin-core-toolbar.scss
+++ b/projects/motif-web-admin-core/src/assets/web-admin-core-toolbar.scss
@@ -10,6 +10,7 @@ app-root nav * {
     display:flex;
     flex-direction:column;
     overflow-x: hidden;
+    overflow: hidden;
   }
 
   nav div {
